--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,221 @@
-style
+
+body{
+    margin: 0;
+    background: #cdd5d7;
+}
+main{
+    scroll-behavior: smooth;
+}
+
+.dropdown:hover .navbar_menu {
+    display: block;
+  }
+
+#section1_content{
+    width: 50em;
+    text-align: left;
+    color: white;
+    padding: 2em 0 5em 10em;
+
+}
+#section1 .landing__container1{
+    background: linear-gradient(0deg, rgb(46, 63, 55) 0%, rgba(0,13,60,1) 100%);
+    margin: auto;
+}
+
+
+#section2 .landing__container{
+    display: flex;
+    padding: 0 4em 0em 4em;
+    
+}
+
+.section2_content{
+    width: 30em;
+    text-align: center;
+    padding: 2em;
+    margin: 5em 3em 5em 3em;
+    
+}
+
+.active_section .section2_content{
+    border: 1px solid;
+}
+
+#section3_content{
+    margin: 0 0 5em 0;
+    padding: 1em 10em 3em 10em;
+    
+}
+
+.active_section #section3_content{
+    background-color:#6c777d54;
+    color: whitesmoke;
+}
+
+#section4_content{
+    margin: 0 5em 5em 5em;
+    padding: 1em 5em 3em 5em;
+    
+}
+
+.active_section #section4_content{
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+}
+
+
+
+header{
+    background-color: black;
+    filter: drop-shadow(0 0 0.75rem rgb(83, 94, 83));
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    border:10em;
+    color: whitesmoke;
+}
+a{
+    color: whitesmoke;
+}
+
+nav ul{
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    z-index: 3;
+}
+nav li {
+    padding: 1em 0 1em 0;
+    color: whitesmoke;
+}
+nav li a:visited{
+    color: whitesmoke;
+}
+
+nav li a:active{
+    color: whitesmoke;
+}
+
+#navbar_list a{
+    text-decoration: none;
+    padding: 1em;
+}
+#navbar_list li:hover{
+    background-color: rgb(180, 202, 134);
+}
+
+main{
+    text-align: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 0;
+}
+
+.active_section .landing__container1, 
+.active_section .landing__container{
+
+    filter: drop-shadow(0 0 0.8rem rgb(41, 48, 41));
+}
+
+.active_link{
+    background-color: rgb(180, 202, 134);
+
+}
+footer{
+    text-align: center;
+    padding: 1em;
+    background-color: black;
+    color: whitesmoke;
+}
+nav{
+    display: grid;
+    grid-template-columns: 1400px;
+    grid-template-areas:
+    "a b"
+}
+
+.dropbtn {
+    background-color: black;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+  }
+.dropdown{
+    position: relative;
+    display: inline-block;
+    height: auto;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: black;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropbtn:hover {
+    background-color: rgb(180, 202, 134);
+}
+  
+.dropdown-content a {
+    color: whitesmoke;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.show {
+    display:block;
+}
+
+@media screen and (max-width:800px) {
+
+    #section1_content{
+        width: 100%;
+        text-align: left;
+        color: white;
+        padding: 1em 2px 1em 2px;
+
+    }
+    #section2 .landing__container{
+        display: block;
+        padding: 0 4em 0em 4em;
+        
+    }
+    
+    .section2_content{
+        width: 30em;
+        text-align: center;
+        padding: 2em;
+        margin: 5em 3em 5em 3em;
+        
+    }
+    nav{
+        grid-template-columns: auto;
+    }
+
+}
+
+@media screen and (max-width:400px) {
+    nav{
+        display: block;
+    }
+    .section2_content, 
+    #section2.landing__container, 
+    #section3, 
+    #section3_content, 
+    #section4_content0{
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+
+}
